# HAPO-G

./: .gitignore  .gitmodules  README.md  build.sh  hapog.py  install.sh  requirements.txt  setup.cfg  setup.py
conda_files/: build.sh  conda_build_config.yaml  meta.yaml
hapog/: cli.py  mapping.py  pipeline.py
lib/: mapping.py  misc.py  pipeline.py
scripts/: multi_map.py
scripts/lib/: mapping.py  masking.py  misc.py
src/: CMakeLists.txt  Makefile  alipile.c  alipile.h  find_htslib.cmake  hash.c  hash.h  polish_consensus.c  polished.c  polished.h
